--- a/boostrap_Nash.html
+++ b/boostrap_Nash.html
@@ -52,127 +52,136 @@
         </nav>
 
         <!--tarjetas  -->
+        <div class="container-fluid">
+            <div class="container d-flex mt-5 justify-content-space-between d-grid gap-8">
+                <nav class="container" style="padding-top: 20px;">
+                    <div class="card" style="width: 18rem; padding: 10px;">
+                        <img src="img/pantalones_tallealto.png" class="card-img-top" alt="..." ">
+                    <div class=" card-body">
+                        <h5 class="card-title" id="Product_1_name">pantalon sueltogris</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <h6 style="padding-bottom: 10px;"><span id="Product_1_price">20</span><span>€</span></h6>
+                        <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                            onclick="añadirCarrito('Product_1_name','Product_1_price')">Añadir al carrito
+                        </a>
+                    </div>
+            </div>
+            </nav>
+            <nav class="container" style="padding-top: 20px;">
+                <div class="card" style="width: 18rem; padding: 10px;">
+                    <img src="img/vestido_tunico.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title" id="Product_2_name">Vestido Túnico</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <h6 style="padding-bottom: 10px;"><span id="Product_2_price">18</span><span>€</span></h6>
+                        <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                            onclick="añadirCarrito('Product_2_name','Product_2_price')">Añadir al
+                            carrito</a>
+                    </div>
+                </div>
+            </nav>
+            <nav class="container" style="padding-top: 20px;">
+                <div class="card" style="width: 18rem; padding: 10px;">
+                    <img src="img/falda_print.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title" id="Product_3_name">Falda Mid Print</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <h6 style="padding-bottom: 10px;"><span id="Product_3_price">12</span><span>€</span></h6>
+                        <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                            onclick="añadirCarrito('Product_3_name','Product_3_price')">Añadir al
+                            carrito</a>
+                    </div>
+                </div>
+            </nav>
+            <nav class="container" style="padding-top: 20px;">
+                <div class="card" style="width: 18rem; padding: 10px;">
+                    <img src="img/cardigan_largo_rayas.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title" id="Product_4_name">Cardigan Largo Rayas</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <h6 style="padding-bottom: 10px;"><span id="Product_4_price">22</span><span>€</span></h6>
+                        <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                            onclick="añadirCarrito('Product_4_name','Product_4_price')">Añadir al
+                            carrito</a>
+                    </div>
+                </div>
 
+            </nav>
+        </div>
         <div class="container d-flex mt-5 justify-content-space-between d-grid gap-8">
             <nav class="container" style="padding-top: 20px;">
                 <div class="card" style="width: 18rem; padding: 10px;">
-                    <img src="img/pantalones_tallealto.png" class="card-img-top" alt="..." ">
-                    <div class=" card-body">
-                    <h5 class="card-title" id="Product_1_name">pantalon sueltogris</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h6 style="padding-bottom: 10px;"><span id="Product_1_price">20</span><span>€</span></h6>
-                    <a href="#" class="btn btn-primary" style="background-color:black; border: none" onclick="añadirCarrito('Product_1_name','Product_1_price')">Añadir al carrito
-                    </a>
-                </div>
-        </div>
-        </nav>
-        <nav class="container" style="padding-top: 20px;">
-            <div class="card" style="width: 18rem; padding: 10px;">
-                <img src="img/vestido_tunico.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title" id="Product_2_name">Vestido Túnico</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h6 style="padding-bottom: 10px;"><span id="Product_2_price">18</span><span>€</span></h6>
-                    <a href="#" class="btn btn-primary" style="background-color:black; border: none" onclick="añadirCarrito('Product_2_name','Product_2_price')">Añadir al
-                        carrito</a>
-                </div>
-            </div>
-        </nav>
-        <nav class="container" style="padding-top: 20px;">
-            <div class="card" style="width: 18rem; padding: 10px;">
-                <img src="img/falda_print.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title" id="Product_3_name">Falda Mid Print</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h6 style="padding-bottom: 10px;"><span id="Product_3_price">12</span><span>€</span></h6>
-                    <a href="#" class="btn btn-primary" style="background-color:black; border: none"  onclick="añadirCarrito('Product_3_name','Product_3_price')">Añadir al
-                        carrito</a>
-                </div>
-            </div>
-        </nav>
-        <nav class="container" style="padding-top: 20px;">
-            <div class="card" style="width: 18rem; padding: 10px;">
-                <img src="img/cardigan_largo_rayas.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title" id="Product_4_name">Cardigan Largo Rayas</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h6 style="padding-bottom: 10px;"><span id="Product_4_price">22</span><span>€</span></h6>
-                    <a href="#" class="btn btn-primary" style="background-color:black; border: none"  onclick="añadirCarrito('Product_1_name','Product_4_price')">Añadir al
-                        carrito</a>
-                </div>
-            </div>
-
-        </nav>
-    </div>
-    <div class="container d-flex mt-5 justify-content-space-between d-grid gap-8">
-        <nav class="container" style="padding-top: 20px;">
-            <div class="card" style="width: 18rem; padding: 10px;">
-                <img src="img/falda_mini_zebra.png" class="card-img-top" alt="..." ">
+                    <img src="img/falda_mini_zebra.png" class="card-img-top" alt="..." ">
                 <div class=" card-body">
-                <h5 class="card-title" id="Product_5_name">Falda Mini Zebra</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the card's content.</p>
-                <h6 style="padding-bottom: 10px;"><span id="Product_5_price">14</span><span>€</span></h6>
-                <a href="#" class="btn btn-primary" style="background-color:black; border: none"  onclick="añadirCarrito('Product_5_name','Product_5_price')">Añadir al carrito</a>
-            </div>
-    </div>
-    </nav>
-    <nav class="container" style="padding-top: 20px;">
-        <div class="card" style="width: 18rem; padding: 10px;">
-            <img src="img/mono_overol.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title" id="Product_6_name">Mono Overol</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the card's content.</p>
-                <h6 style="padding-bottom: 10px;"><span id="Product_6_price">24</span><span>€</span></h6>
-                <a href="#" class="btn btn-primary" style="background-color:black; border: none"  onclick="añadirCarrito('Product_6_name','Product_6_price')">Añadir al carrito</a>
-            </div>
-        </div>
-    </nav>
-    <nav class="container" style="padding-top: 20px;">
-        <div class="card" style="width: 18rem; padding: 10px;">
-            <img src="img/vestido_jersey.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title" id="Product_7_name">Vestido Jersei</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the card's content.</p>
-                <h6 style="padding-bottom: 10px;"><span id="Product_7_price">32</span><span>€</span></h6>
-                <a href="#" class="btn btn-primary" style="background-color:black; border: none"  onclick="añadirCarrito('Product_7_name','Product_7_price')">Añadir al carrito</a>
-            </div>
-        </div>
-    </nav>
-    <nav class="container" style="padding-top: 20px;">
-        <div class="card" style="width: 18rem; padding: 10px;">
-            <img src="img/pantalon_ancho.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title" id="Product_8_name">Pantalón anchos</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the card's content.</p>
-                <h6 style="padding-bottom: 10px;"><span id="Product_8_price">28</span><span>€</span></h6>
-                <a href="#" class="btn btn-primary" style="background-color:black; border: none"  onclick="añadirCarrito('Product_8_name','Product_8_price')">Añadir al carrito</a>
-            </div>
-        </div>
-
-    </nav>
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Precio</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="card-title" id="Product_5_name">Falda Mini Zebra</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <h6 style="padding-bottom: 10px;"><span id="Product_5_price">14</span><span>€</span></h6>
+                    <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                        onclick="añadirCarrito('Product_5_name','Product_5_price')">Añadir al carrito</a>
                 </div>
-                <div class="modal-body" id="modalBody">
+        </div>
+        </nav>
+        <nav class="container" style="padding-top: 20px;">
+            <div class="card" style="width: 18rem; padding: 10px;">
+                <img src="img/mono_overol.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" id="Product_6_name">Mono Overol</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <h6 style="padding-bottom: 10px;"><span id="Product_6_price">24</span><span>€</span></h6>
+                    <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                        onclick="añadirCarrito('Product_6_name','Product_6_price')">Añadir al carrito</a>
                 </div>
-                <h3 class="d-flex flex-row-reverse" id="precioTotal" style=" padding-right: 20px;" ></h3>
-                <div class="modal-footer">
-                    <button type="button" class="btn mb-2 btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn mb-2 btn-primary">Comprar</button>
+            </div>
+        </nav>
+        <nav class="container" style="padding-top: 20px;">
+            <div class="card" style="width: 18rem; padding: 10px;">
+                <img src="img/vestido_jersey.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" id="Product_7_name">Vestido Jersei</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <h6 style="padding-bottom: 10px;"><span id="Product_7_price">32</span><span>€</span></h6>
+                    <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                        onclick="añadirCarrito('Product_7_name','Product_7_price')">Añadir al carrito</a>
+                </div>
+            </div>
+        </nav>
+        <nav class="container" style="padding-top: 20px;">
+            <div class="card" style="width: 18rem; padding: 10px;">
+                <img src="img/pantalon_ancho.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" id="Product_8_name">Pantalón anchos</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <h6 style="padding-bottom: 10px;"><span id="Product_8_price">28</span><span>€</span></h6>
+                    <a href="#" class="btn btn-primary" style="background-color:black; border: none"
+                        onclick="añadirCarrito('Product_8_name','Product_8_price')">Añadir al carrito</a>
+                </div>
+            </div>
+
+        </nav>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Precio</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="modalBody">
+                    </div>
+                    <h3 class="d-flex flex-row-reverse" id="precioTotal" style=" padding-right: 20px;"></h3>
+                    <div class="modal-footer">
+                        <button type="button" class="btn mb-2 btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn mb-2 btn-primary">Comprar</button>
+                    </div>
                 </div>
             </div>
         </div>
